syntax = "proto3";

option csharp_namespace = "Consultas_Pacientes.Protos";

package paciente;

import "Protos/AdministracionService.proto";

message PacienteModel {
  int32 id_paciente = 1;
  string nombre = 2;
  string cedula = 3;
  string fecha_nacimiento = 4;
  string telefono = 5;
  string direccion = 6;
  Admin.Centro_Medico centroMedico=7;
}

message GetPacienteRequest {
  int32 id_paciente = 1;
}

message GetPacienteResponse {
  PacienteModel paciente = 1;
}

message GetPacienteListaResponse {
  repeated PacienteModel pacientes = 1;
}

message CrearPacienteRequest {
  int32 id_paciente = 1;
  string nombre = 2;
  string cedula = 3;
  string fecha_nacimiento = 4;
  string telefono = 5;
  string direccion = 6;
  int32 id_centroMedico=7;
}

message CrearPacienteResponse {
  PacienteModel paciente = 1;
}

// Nuevos mensajes para Actualizar y Eliminar
message ActualizarPacienteRequest {
  int32 id_paciente = 1;
  string nombre = 2;
  string cedula = 3;
  string fecha_nacimiento = 4;
  string telefono = 5;
  string direccion = 6;
  int32 id_centroMedico=7;
}

message ActualizarPacienteResponse {
  PacienteModel paciente = 1;
}

message EliminarPacienteRequest {
  int32 id_paciente = 1;
}

message EliminarPacienteResponse {
  bool success = 1;
}

message EmptyResponse{
}
service PacienteService {
  rpc GetPaciente(GetPacienteRequest) returns (GetPacienteResponse);
  rpc GetAllPaciente(EmptyResponse) returns (GetPacienteListaResponse);
  rpc CrearPaciente(CrearPacienteRequest) returns (CrearPacienteResponse);
  rpc ActualizarPaciente(ActualizarPacienteRequest) returns (ActualizarPacienteResponse);
  rpc EliminarPaciente(EliminarPacienteRequest) returns (EliminarPacienteResponse);
}